welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: ':' expected but ')' found.
def faireColonne(i) {
                  ^Array1:30: error: identifier expected but '}' found.
}
^Array1:35: error: Unmatched closing brace '}' ignored here
}
^